# Pragyam

./: .gitignore  ADVANCED_SELECTION_DOCUMENTATION.md  AUDIT_DIRECTIVES.md  CHANGELOG.md  LICENSE  MATHEMATICAL_AUDIT_v3.1.md  QUICKSTART.md  README.md  adaptive_selection.py  advanced_strategy_selector.py  analytics.py  app.py  backdata.py  backtest.py  backtest_engine.py  backtest_integration_patch.py  charts.py  circuit_breaker.py  intelligence.py  logger_config.py  metrics.py  omega_engine.py  portfolio.py  pragati.py  pyproject.toml  regime.py  requirements.txt  scratch_port.csv  strategies.py  strategy_selection.py  style.css  symbols.txt  unified_booster.py  universe.py
core/: Pragyam-Legacy.rar
docs/: MATHEMATICAL_FRAMEWORK.md  PROCESS_ARCHITECTURE.md  STRATEGY_GUIDE.md
ui/: __init__.py  components.py  theme.css  theme.py
