[project]
name = "pragyam"
version = "10.0.1"
description = "Conviction-based portfolio curation for Indian equity markets: a six-signal blend (RSI, Oscillator, Z-Score, MA-alignment, volume-profile Value Area, and Strategy Endorsement) scored against a fixed eight-factor market-regime detector, with Bayesian calibration that learns five of the six conviction weights (per universe/index/regime-family) from forward returns and deploys only when a statistically significant edge over the default is demonstrated, a Broker Sync step that writes curated units into broker order JSONs, and an Analytics tab that tracks the curated book against a universe-matched benchmark — @thebullishvalue"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.28.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "plotly>=5.18.0",
    "yfinance>=0.2.28",
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0",
    "colorama>=0.4.6",
    "optuna>=3.5.0",
    "requests>=2.31.0",
    "openpyxl>=3.1.2",
]

[tool.ruff]
target-version = "py310"
line-length = 140

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "E741",   # ambiguous variable name (w, d, etc. used in strategies)
    "B007",   # unused loop variable
    "SIM108", # ternary operator (readability preference)
]

[tool.ruff.lint.isort]
known-first-party = ["strategies", "backdata", "charts", "regime", "intelligence", "portfolio", "universe", "metrics", "circuit_breaker", "logger_config"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
